--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -131,7 +131,23 @@ The parameter can range from 0, meaning that the hole doesn't spin, to 1, meanin
 
 If a black hole would have even larger angular momentum than allowed by these constraints, it would mean that it actually wouldn't be a black hole at all, since the event horizon would disappear due to the extreme rotation. This would cause what is known as a naked singularity, meaning that a singularity that is normally contained within a black hole would be visible to an outside observer. The possible existence of such singularities in nature is uncertain. If they were to exist, they might cause fundamental problems for physics as we know it. We would be able to see matter condensed to infinite density, and we have no theories that can predict how spacetime works near such abnormalities. Normally this is not a problem, since they cannot be observed inside event horizons. However the cosmic censorship hypothesis suggests that naked singularities cannot be formed in nature from realistic initial conditions, which would avoid the problem altogether \citep{wald:1997}.
 
+Black holes that appear in nature are assumed to be most likely Kerr black holes. Stars are nearly neutrally charged, but they do spin around themselves, thus possessing angular momentum. If they then collapse into a compact object, the angular momentum is conserved and thus they spin rapidly.
+
+\begin{figure}[h!tb]
+\centering
+\includegraphics[scale=0.7]{../images/ergosphere.png}
+\caption{Diagram of the ergosphere and the inner and outer event horizons of a Kerr black hole. The variable a is the spin parameter of the black hole. If it was 0 we would have a Schwarzschild black hole instead.
+(Image \copyright \ User:Yukterez/Wikimedia Commons/CC-BY-SA-4.0)}
+\label{fig:KerrHole}
+\end{figure}
+
 %TODO mainitse naked singularities Kulmaliikemäärän täytyy olla alle tietyn rajan jotta tapahtumahorisontti säilyy
+
+%kuva mustasta aukosta josson ergosphere yms. Lisää selitystä. Kerro ergospherestä ja muista limiteistä. Anna yhtälö joka kertoo tapahtumahorisontit.
+
+%Hawkingin säteily?
+
+%limits for becoming a black hole? Tolman–Oppenheimer–Volkoff limit and Chandrasekhar limit
 
 %mainitse että luonnossa aukot säilyttää usein tähden neutraalin varauksen, mutta liikemäärää on melkein aina
 
@@ -140,6 +156,9 @@ If a black hole would have even larger angular momentum than allowed by these co
 \section{Different types of black holes}
 
 \subsection{Stellar mass black holes}
+
+%observable in x-ray compact binary systems
+
 \subsection{Intermediate mass black holes}
 \subsection{Supermassive black holes}
 
