Lisää tekstiä, kuvan päivitys

--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -121,7 +121,7 @@ The simplest type of black hole is created when an object of mass M becomes smal
 \begin{equation}
 r_S = \frac{2GM}{c^2} \ .
 \end{equation}
-This is called the Schwarzschild radius, so named after the German astronomer Karl Schwarzschild, who found an exact solution for the Einstein field equations. The surface at this radius is called the event horizon.
+This is called the Schwarzschild radius, so named after the German astronomer Karl Schwarzschild, who found an exact solution for the Einstein field equations. The surface at this radius is called the event horizon. Event horizons are mathematical surfaces, and they don't form any sort of physical barrier. An observer can fall inside the event horizon without any problem. The event horizon simply marks the limit at which not even light can escape the gravitational pull of the black hole.
 
 There exists solutions that don't satisfy the condition given by equation \ref{equ:bhunique}, but those are not stationary, i.e. their gravitational field is not time-independent. This gives an upper limit to the angular momentum that a physical uncharged black hole can have. This limit can be expressed as the specific angular momentum $a = \frac{J}{M}$ or as the dimensionless spin parameter
 \begin{equation}
@@ -129,27 +129,30 @@ a_* = \frac{Jc}{GM^2} \ .
 \end{equation}
 The parameter can range from 0, meaning that the hole doesn't spin, to 1, meaning that it spins as fast as possible for a given mass \citep{middleton:2016}.
 
-If a black hole would have even larger angular momentum than allowed by these constraints, it would mean that it actually wouldn't be a black hole at all, since the event horizon would disappear due to the extreme rotation. This would cause what is known as a naked singularity, meaning that a singularity that is normally contained within a black hole would be visible to an outside observer. The possible existence of such singularities in nature is uncertain. If they were to exist, they might cause fundamental problems for physics as we know it. We would be able to see matter condensed to infinite density, and we have no theories that can predict how spacetime works near such abnormalities. Normally this is not a problem, since they cannot be observed inside event horizons. However the cosmic censorship hypothesis suggests that naked singularities cannot be formed in nature from realistic initial conditions, which would avoid the problem altogether \citep{wald:1997}.
+If a black hole would have even larger angular momentum than allowed by these constraints, it would mean that it actually wouldn't be a black hole at all, since the event horizon would disappear due to the extreme rotation. This would cause what is known as a naked singularity, meaning that a singularity that is normally contained within a black hole would be visible to an outside observer. The possible existence of such singularities in nature is uncertain. If they were to exist, they might cause fundamental problems for physics as we know it. We would be able to see matter condensed to infinite density, and we have no theories that can predict how spacetime works near such abnormalities. Normally this is not a problem, since they cannot be observed inside event horizons. However the cosmic censorship hypothesis suggests that naked singularities cannot be formed in nature from realistic initial conditions, which would avoid the problem altogether \citep{wald:1997}. An extremely rapid spin could prevent the collapse into a black hole thanks to the centrifugal forces. The object would have to lose enough of it's angular momentum before it could collapse.
 
-Black holes that appear in nature are assumed to be most likely Kerr black holes. Stars are nearly neutrally charged, but they do spin around themselves, thus possessing angular momentum. If they then collapse into a compact object, the angular momentum is conserved and thus they spin rapidly.
+Black holes that appear in nature are assumed to be most likely Kerr black holes. Stars are nearly neutrally charged, but they do spin around themselves, thus possessing angular momentum. Even if the object lost a considerable amount of its rotational energy, the newly created black hole would be spinning somewhat. And even black holes with small amounts of angular momentum can gain more of it through its interactions with surrounding matter. Infalling matter creates an accretion disk around the hole. Eventually the matter will fall within the event horizon, conferring its mass and angular momentum to the black hole, speeding up its rotation \citep{bhphysics}.
+
+While Schwarzschild black holes have only the one event horizon and a point-like singularity in the middle, spinning black holes are more complicated. 
 
 \begin{figure}[h!tb]
 \centering
-\includegraphics[scale=0.7]{../images/ergosphere.png}
-\caption{Diagram of the ergosphere and the inner and outer event horizons of a Kerr black hole. The variable a is the spin parameter of the black hole. If it was 0 we would have a Schwarzschild black hole instead.
-(Image \copyright \ User:Yukterez/Wikimedia Commons/CC-BY-SA-4.0)}
+\includegraphics[width=\textwidth]{../images/kerrhole.png}
+\caption{Diagram showing the structure of a Kerr black hole. It shows the inner and outer ergospheres and event horizons, and the ring singularity in the middle. This kind of black hole has non-zero spin. If the spin was 0 we would have a Schwarzschild black hole instead.
+(Figure 13.3 from \cite{grintro})}
 \label{fig:KerrHole}
 \end{figure}
 
-%TODO mainitse naked singularities Kulmaliikemäärän täytyy olla alle tietyn rajan jotta tapahtumahorisontti säilyy
+%TODO
 
 %kuva mustasta aukosta josson ergosphere yms. Lisää selitystä. Kerro ergospherestä ja muista limiteistä. Anna yhtälö joka kertoo tapahtumahorisontit.
+%ergosphere ja horisontti yhtyy navoilla
+
+%event horisontit ovat koordinaattisingulariteetteja, eivät mitään kiinteitä pintoja, vain matemaattisesti merkittäviä pintoja
 
 %Hawkingin säteily?
 
 %limits for becoming a black hole? Tolman–Oppenheimer–Volkoff limit and Chandrasekhar limit
-
-%mainitse että luonnossa aukot säilyttää usein tähden neutraalin varauksen, mutta liikemäärää on melkein aina
 
 %mainitse törmäykset? Synty? Synty ehkä enemmän erimassaisten aukkojen yhteydessä
 
