--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -10,7 +10,7 @@ booktitle = {Gravity, by Eric Poisson , Clifford M.~Will, Cambridge, UK: Cambrid
 
 @book{bhphysics,
 title = {Introduction to black hole physics},
-author = {Frolov, V. P.},
+author = {Frolov, V.~P.},
 editor = {Zelnikov, Andrei},
 address = {Oxford ; New York},
 publisher = {Oxford University Press},
@@ -20,7 +20,7 @@ pages = {488}
 
 @book{grintro,
 title = {General relativity : an introduction for physicists},
-author = {Hobson, M. P. kirjoittaja},
+author = {Hobson, M.~P.},
 address = {Cambridge ; New York},
 publisher = {Cambridge University Press},
 year = {2006},
