--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -10,7 +10,7 @@ booktitle = {Gravity, by Eric Poisson , Clifford M.~Will, Cambridge, UK: Cambrid
 
 @book{bhphysics,
 title = {Introduction to black hole physics},
-author = {Frolov, V.~P.},
+author = {Frolov, V.~P. and Zelnikov, A.},
 editor = {Zelnikov, Andrei},
 address = {Oxford ; New York},
 publisher = {Oxford University Press},
@@ -20,11 +20,26 @@ pages = {488}
 
 @book{grintro,
 title = {General relativity : an introduction for physicists},
-author = {Hobson, M.~P.},
+author = {Hobson, M.~P. and Efstathiou, G.~P. and Lasenby, A.~N.},
 address = {Cambridge ; New York},
 publisher = {Cambridge University Press},
 year = {2006},
 }
+
+@ARTICLE{woosley:2002,
+   author = {{Woosley}, S.~E. and {Heger}, A. and {Weaver}, T.~A.},
+    title = "{The evolution and explosion of massive stars}",
+  journal = {Reviews of Modern Physics},
+ keywords = {Nucleosynthesis in novae supernovae and other explosive environments, Supernovae, Hydrostatic stellar nucleosynthesis, Elementary particle processes, Stellar structure interiors evolution nucleosynthesis ages, Neutron stars, Relativity and gravitation},
+     year = 2002,
+    month = nov,
+   volume = 74,
+    pages = {1015-1071},
+      doi = {10.1103/RevModPhys.74.1015},
+   adsurl = {http://adsabs.harvard.edu/abs/2002RvMP...74.1015W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{will:2006,
    author = {{Will}, C.~M.},
