--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -26,6 +26,22 @@ publisher = {Cambridge University Press},
 year = {2006},
 }
 
+@INPROCEEDINGS{casares:2007,
+   author = {{Casares}, J.},
+    title = "{Observational evidence for stellar-mass black holes}",
+booktitle = {Black Holes from Stars to Galaxies -- Across the Range of Masses},
+     year = 2007,
+   series = {IAU Symposium},
+   volume = 238,
+   eprint = {astro-ph/0612312},
+   editor = {{Karas}, V. and {Matt}, G.},
+    month = apr,
+    pages = {3-12},
+      doi = {10.1017/S1743921307004590},
+   adsurl = {http://adsabs.harvard.edu/abs/2007IAUS..238....3C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{woosley:2002,
    author = {{Woosley}, S.~E. and {Heger}, A. and {Weaver}, T.~A.},
     title = "{The evolution and explosion of massive stars}",
